Page MenuHome GnuPG

Kleopatra: Filter does not work
Testing, HighPublic

Description

When you start Kleopatra, the certificate filter is set to "All" or the equivalent in other languages, e.g. "Alle" in German.

So in German, the tabs will start out with "Alle" but on the first or second filter change switch to "Abgelaufen", which is the first entry in the filter list.
Here the filter dropdown shows "Abgelaufen" from the start but the tabs show "Alle" (this was after only a language change only and not fresh install):


It seems the first filter change works sometimes:

The second then shows "expired", regardless of what was chosen:

The behavior shows in VS-Desktop-3.4.0-beta1294 and AppImage-3.4.0-beta1311.
The filter still worked in vsd-beta1250

Details

Version
current vsd34-Beta versions

Event Timeline

ebo triaged this task as High priority.Fri, Jul 3, 10:57 AM
ebo created this task.

I can reproduce some weirdness. Some filters can be selected (e.g. Certified, Expired, ...), but when I try to select Disabled or "Fully Qualified" then the filter switches to All.

ikloecker moved this task from Backlog to WIP on the vsd34 board.
ebo updated the task description. (Show Details)
ebo updated the task description. (Show Details)
ebo updated the task description. (Show Details)
ikloecker changed the task status from Open to Testing.Mon, Jul 6, 4:10 PM

Note: In Gpg4win 5.0 (and later) the problem doesn't occur because the problematic code was changed about two years ago. I have backported the relevant changes that fix the problem.

ikloecker mentioned this in Unknown Object (Maniphest Task).Mon, Jul 13, 9:41 AM