Add custom key filter for certificate selection in sign encrypt widget

(cherry picked from commit 84b52e47f35aee7f8cb38f532f797ad2fb62f62d)

Only the changes in searchbar.* are backported to fix
GnuPG-bug-id: 8323